# filetest-rs

./: CHANGELOG.md  Cargo.toml  README.md
docs/: file_ab_test.md
src/: arguments.rs  file_ab_test.rs  lib.rs
tests/: file_ab_test.rs
tests/files/artificial/: lowercase.txt  uppercase.gold.txt  uppercase.txt
tests/files/reverse/: hello_world.txt
