[package]
name = "filetest"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository = "https://github.com/Lut99/filetest-rs"
license = "Apache-2.0"
description = "TODO"


[lib]
proc-macro = true


[dependencies]
macro-string = "0.1.0"
proc-macro2 = "1.0.0"
syn = { version = "2.0.0", default-features = false, features = ["clone-impls", "full", "parsing", "printing"] }
quote = { version = "1.0.0", default-features = false }


[features]
default = []

log = []
